chore: fix comment
