# docs/swagger.json
@@ -7,9 +7,12 @@
         "version": "0.1"
     },
     "paths": {
-        "/users/{id}": {
+        "/users": {
             "get": {
                 "description": "ユーザ一覧を返却する",
+                "tags": [
+                    "user"
+                ],
                 "summary": "ユーザ一覧",
                 "responses": {
                     "200": {
@@ -19,6 +22,58 @@
                             "items": {
                                 "$ref": "#/definitions/entity.User"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "description": "指定したユーザを返却する",
+                "tags": [
+                    "user"
+                ],
+                "summary": "ユーザ詳細",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ユーザのID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.User"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "ユーザを作成する",
+                "tags": [
+                    "user"
+                ],
+                "summary": "ユーザ作成",
+                "parameters": [
+                    {
+                        "description": "作成するユーザのデータ",
+                        "name": "user_data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.User"
                         }
                     }
                 }
