# handler/user.go
@@ -20,8 +20,9 @@ func NewUserHandler(userRepo *repository.UserRepository) *UserHandler {
 
 // @Summary ユーザ一覧
 // @Description ユーザ一覧を返却する
+// @Tags user
 // @Success 200 {object} []entity.User
-// @Router /users/{id} [get]
+// @Router /users [get]
 func (u *UserHandler) Index(w http.ResponseWriter, r *http.Request) {
 	users, err := u.userRepo.FindAll()
 	if err != nil {
@@ -32,6 +33,12 @@ func (u *UserHandler) Index(w http.ResponseWriter, r *http.Request) {
 	respondJson(w, users)
 }
 
+// @Summary ユーザ詳細
+// @Description 指定したユーザを返却する
+// @Tags user
+// @Param id path string true "ユーザのID"
+// @Success 200 {object} entity.User
+// @Router /users/{id} [get]
 func (u *UserHandler) Show(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id, err := strconv.Atoi(vars["id"])
@@ -48,6 +55,12 @@ func (u *UserHandler) Show(w http.ResponseWriter, r *http.Request) {
 	respondJson(w, user)
 }
 
+// @Summary ユーザ作成
+// @Description ユーザを作成する
+// @Tags user
+// @Param user_data body entity.User true "作成するユーザのデータ"
+// @Success 200 {object} entity.User
+// @Router /users [post]
 func (u *UserHandler) Create(w http.ResponseWriter, r *http.Request) {
 	var user entity.User
 	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
